# DBAAgent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  ENGINEERING_GUIDELINES.md  README.md  TASK.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  global.css
frontend/src/components/: JobsPanel.tsx  SchedulesPanel.tsx  ScrapeForm.tsx
src/dba_agent/: __init__.py
src/dba_agent/cli/: ingest.py
src/dba_agent/filters/: __init__.py  engine.py
src/dba_agent/models/: __init__.py  listing.py
src/dba_agent/repositories/: postgres.py
src/dba_agent/services/: __init__.py  chrono24.py  classifier.py  scraper.py  watch_value.py
src/dba_agent/utils/: log.py  pipelines.py
src/dba_agent/web/: __init__.py  events.py  jobs.py  main.py
src/dba_agent/web/templates/: index.html
src/dba_agent/web/templates/partials/: recent.html  results.html  schedules.html  scrape_group_status.html  scrape_groups.html  scrape_jobs.html  scrape_status.html
src/dba_agent/workers/: image_downloader.py
tests/: test_placeholder.py  test_scraper.py  test_watch_value.py
