[project]
name = "dba-agent"
version = "0.1.0"
description = "DBA deal-finding system"
requires-python = ">=3.11"
authors = [{ name = "Unknown" }]
readme = "README.md"

[project.dependencies]
pydantic = "^2.0"
fastapi = "^0.110"
scrapy = "^2.11"
selenium = "^4.10"
langchain = "^0.1"
requests = "^2.31"
psycopg2-binary = "^2.9"
pgvector = "^0.1.10"
redis = "^5.0"
huggingface-hub = "^0.19"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "mypy",
    "ruff",
    "black",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
